Hover effect in squares

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,13 @@
 }
 
 .square{
-    background-color: aqua;
+    /* background-color: aqua; */
     border-style: solid;
     width: 10px;
     height: 10px;
+    
+}
+
+.hovered{
+    background-color: brown;
 }
